--- a/securecoding/src/main/resources/static/bootstrap/css/styles.css
+++ b/securecoding/src/main/resources/static/bootstrap/css/styles.css
@@ -391,8 +391,8 @@ select:disabled {
     font-size: 1rem;
     font-weight: 400;
     border-radius: 0.25rem;
-    border: 1px solid #F2F2F2;
-    background-color: #F2F2F2;
+    border: 1px solid #fcfafa;
+    background-color: #fcfafa;
 }
 
 .code-area {
@@ -403,8 +403,8 @@ select:disabled {
     font-weight: 400;
     margin-right: 20%;
     border-radius: 0.25rem;
-    border: 1px solid #F2F2F2;
-    background-color: #F2F2F2;
+    border: 1px solid #fcfafa;
+    background-color: #fcfafa;
 }
 
 .btn {
@@ -424,6 +424,75 @@ select:disabled {
   line-height: 1.5;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.wrapper {
+  width: 100%;
+  margin: 0 auto;
+}
+.tabs {
+  position: relative;
+  margin: 3rem 0;
+  background: #fff;
+  height: 16rem;
+}
+.tabs::before,
+.tabs::after {
+  content: "";
+  display: table;
+}
+.tabs::after {
+  clear: both;
+}
+.tab {
+  float: left;
+  border-radius: 0.3rem 0.3rem 0 0;
+}
+
+.tab-switch {
+  display: none;
+}
+.tab-label {
+  position: relative;
+  display: block;
+  line-height: 2.75em;
+  font-weight: 600;
+  height: 50px;
+  padding: 0 1.618em;
+  background: #ffe74a;
+  border-radius: 0.3rem 0.3rem 0 0;
+  color: #fff;
+  cursor: pointer;
+  top: 0;
+  transition: all 0.25s;
+}
+.tab-label:hover {
+  top: -0.25rem;
+  transition: top 0.25s;
+}
+.tab-content {
+  width: 100%;
+  height: 15rem;
+  position: absolute;
+  z-index: 1;
+  top: 2.75em;
+  left: 0;
+  background: #fff;
+  opacity: 0;
+  transition: all 0.35s;
+}
+.tab-switch:checked + .tab-label {
+  background: #fcfafa;
+  color: #2c3e50;
+  font-weight: 600;
+  transition: all 0.35s;
+  z-index: 1;
+  top: -0.0625rem;
+}
+.tab-switch:checked + label + .tab-content {
+  z-index: 2;
+  opacity: 1;
+  transition: all 0.35s;
 }
 
 [list]::-webkit-calendar-picker-indicator {
