--- a/securecoding/src/main/resources/templates/1/1.4.code.html
+++ b/securecoding/src/main/resources/templates/1/1.4.code.html
@@ -10,35 +10,97 @@
 <!-- Section-->
 <section class="py-5">
   <div class="container px-4 px-lg-5 mt-5">
-    <h4 class="fw-bolder" style="text-align: center">4. 크로스사이트 스크립</h4>
+    <h4 class="fw-bolder" style="text-align: center">4. 크로스사이트 스크립트</h4>
     <p style="text-align: center">제1절 입력데이터 검증 및 표현</p>
     <br />
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-      <div class="col mb-5" style="width: 40%; height: 200%">
+        <!-- Vulnerable code -->
+        <div class="col mb-5" style="width: 60%">
         <h4 class="fw-bolder" style="text-align: center">Vulnerable</h4>
         <hr />
           <form action="#" method="get">
-            <br />
-            <div class="card h-100">
-              <!-- Vulnerable code -->
-              <code>public String </code>
-            </div>
+              <div class="wrapper" style="width: 100%">
+                  <div class="tabs">
+                      <div class="tab">
+                          <input type="radio" name="css-tabs" id="tab-1" checked class="tab-switch">
+                          <label for="tab-1" class="tab-label">CommandController.java</label>
+                          <div class="tab-content">
+                              <code class="code-area" style="height: 15em"><textarea disabled class="area" style="height: 15em">@PostMapping("/1/4/vuln")
+public String XSSForm_vuln(HttpServletRequest request, Model model) {
+     String input = request.getParameter("input");
+
+     model.addAttribute("input", input);
+     model.addAttribute("result", input);
+
+     return "/1/1.4";
+}
+              </textarea></code>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </form>
+          <br />
+          <hr/>
       </div>
-      <div class="col mb-5" style="width: 40%; height: 200%">
+        <!-- Secure code -->
+        <div class="col mb-5" style="width: 60%">
         <h4 class="fw-bolder" style="text-align: center">Secure</h4>
         <hr />
           <form action="#" id="secure2" method="get">
-            <br />
-            <div class="card h-100">
-              <!-- Secure Code -->
-              <textarea readonly class="area"></textarea>
-            </div>
+                <div class="wrapper" style="width: 100%">
+                    <div class="tabs">
+                        <div class="tab">
+                            <input type="radio" name="css-tabs" id="tab-3" checked class="tab-switch">
+                            <label for="tab-3" class="tab-label">CommandController.java</label>
+                            <div class="tab-content">
+                                <code class="code-area" style="height: 15em"><textarea wrap="off" disabled class="area" style="height: 15em">@Controller
+public class CommandController {
+
+    private static CommandService commandService;
+
+    @PostMapping("/1/4/secure")
+    public String XSSForm_secure(HttpServletRequest request, Model model) {
+        String input2 = request.getParameter("input2");
+        String result2 = commandService.XSSFilterService(input2);
+
+        model.addAttribute("result2", result2);
+
+        return "/1/1.4";
+    }
+}</textarea></code>
+                            </div>
+                        </div>
+                        <div class="tab">
+                            <input type="radio" name="css-tabs" id="tab-4" class="tab-switch">
+                            <label for="tab-4" class="tab-label">CommandService.java</label>
+                            <div class="tab-content">
+                                <pre><code class="code-area" style="height: 15em"><textarea disabled class="area" style="height: 15em">public static String XSSFilterService(String input) {
+    input = input.replaceAll("<", "&lt;");
+    input = input.replaceAll(">", "&gt;");
+    input = input.replaceAll("/", "&#47;");
+    input = input.replaceAll("'", "&#39;");
+    input = input.replaceAll("\"", "&#x22;");
+    input = input.replaceAll("`", "&#96;");
+    input = input.replaceAll("[(]", "&#x28;");
+    input = input.replaceAll("[)]", "&#x29;");
+
+    return input;
+
+    }
+              </textarea></code></pre>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              <br />
           </form>
+          <br />
+          <hr/>
       </div>
     </div>
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 74%" th:href="@{/1/4}">실습 하기</a></div>
+      <div class="text-center"><a class="btn" style="margin-left: 55%; background-color: #F5Df4D" th:href="@{/1/4}">실습 하기</a></div>
     </div>
   </div>
 </section>
