--- a/securecoding/src/main/resources/templates/1/1.5.html
+++ b/securecoding/src/main/resources/templates/1/1.5.html
@@ -19,7 +19,7 @@
         <hr />
           <form action="/1/5/vuln" id="vulnerable5" method="post">
             <input type="text" id="cmd" name="cmd" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" id="execute" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" id="execute" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
@@ -33,7 +33,7 @@
         <hr />
           <form action="/1/5/secure" id="secure5" method="post">
             <input type="text" id="cmd2" name="cmd2" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
-            <button type="submit" class="btn" style="background-color: #F5Df4D; width: 16%; height: 50px">실행</button>
+            <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
             <div class="card h-100">
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 74%" href="#">코드 보기</a></div>
+      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 75%" th:href="@{/1/5/code}">코드 보기</a></div>
     </div>
   </div>
 </section>
