--- a/securecoding/src/main/resources/templates/2/2.8.code.html
+++ b/securecoding/src/main/resources/templates/2/2.8.code.html
@@ -84,7 +84,7 @@ public String RandomForm_secure(HttpServletRequest request, Model model) throws 
       </div>
     </div>
       <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-          <div class="text-center"><a class="btn" style="margin-left: 55%; background-color: #F5Df4D" th:href="@{/2/8}">실습 하기</a></div>
+          <div class="text-center"><a class="btn" style="margin-left: 55%; background-color: #ffe74a" th:href="@{/2/8}">실습 하기</a></div>
       </div>
   </div>
 </section>
