--- a/securecoding/src/main/resources/templates/2/2.8.html
+++ b/securecoding/src/main/resources/templates/2/2.8.html
@@ -32,7 +32,7 @@
         <h4 class="fw-bolder" style="text-align: center">Secure</h4>
         <hr />
           <form action="/2/8/secure" method="post">
-            <input type="text" id="value2" name="value2" placeholder="※ 난수 생성을 위한 별도의 입력값이 필요하지 않습니다." class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
+            <input type="text" id="value2" name="value2" placeholder="※ 난수 생성을 위한 별도의 입력값이 필요하지 않습니다." disabled class="form-control" style="width: 80%; margin-right: 4%; height: 50px; font-size: 13px; float: left" />
             <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
