--- a/securecoding/src/main/resources/templates/2/2.10.html
+++ b/securecoding/src/main/resources/templates/2/2.10.html
@@ -24,16 +24,8 @@
                           <input type="radio" name="css-tabs" id="tab-1" checked class="tab-switch">
                           <label for="tab-1" class="tab-label">AuthorityController.java</label>
                           <div class="tab-content">
-                              <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">@PostMapping("/5/1/vuln")
-public String NullForm_vuln(HttpServletRequest request, Model model) throws IOException {
-      String cmd = request.getParameter("cmd");
-      String result;
-
-      result = commandService.OSCommandService(cmd);
-      model.addAttribute("result", result);
-
-      return "/5/5.1";
-}</textarea></code>
+                              <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">File file = new File(downloadFilePath);
+JarFile jarfile = new JarFile(file);</textarea></code>
                           </div>
                       </div>
                   </div>
@@ -52,34 +44,18 @@ public String NullForm_vuln(HttpServletRequest request, Model model) throws IOEx
                           <input type="radio" name="css-tabs" id="tab-2" checked class="tab-switch">
                           <label for="tab-2" class="tab-label">AuthorityController.java</label>
                           <div class="tab-content">
-                              <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">@PostMapping("/5/1/secure")
-public String NullForm_secure(HttpServletRequest request, Model model) throws IOException {
+                              <code class="code-area" style="height: 15em"><textarea disabled wrap="off" class="area" style="height: 15em">File file = new File(downloadFilePath);
+JarFile jarfile = new JarFile(f, true);
+Enumeration<JarEntry> ens = jarfile.entries();
 
-        String cmd2 = request.getParameter("cmd2");
-        String result2;
-
-        List<String> allowedCommands = new ArrayList<String>();
-        allowedCommands.add("cal");
-
-        if (cmd2 == null) {
-            model.addAttribute("result2", "명령어를 입력하세요");
-
-        } else if (cmd2.matches("[|;&:>-]*")) {
-            model.addAttribute("message", "허용하지 않는 명령어입니다.");
-            model.addAttribute("searchUrl", "/5/1");
-
-            return "message";
-        } else if (!allowedCommands.contains(cmd2)) {
-            model.addAttribute("message", "허용하지 않는 명령어입니다.");
-            model.addAttribute("searchUrl", "/5/1");
-
-            return "message";
-        } else {
-            result2 = commandService.OSCommandService(cmd2);
-            model.addAttribute("result2", result2);
-        }
-
-        return "/5/5.1";
+while(ens.hasMoreElements()) {
+	JarEntry en = ens.nextElement();
+	if (!en.isDirectory()) {
+		if (en.toString().equals(path)) {
+			byte[] data = readAll(jar.getInputStream(en), en.getSize());
+			CodeSigner[] signers = en.getCodeSigners();
+		}
+	}
 }</textarea></code>
                           </div>
                       </div>
@@ -90,9 +66,6 @@ public String NullForm_secure(HttpServletRequest request, Model model) throws IO
           <hr />
       </div>
     </div>
-      <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-          <div class="text-center"><a class="btn" style="margin-left: 55%; background-color: #ffe74a" th:href="@{/5/1}">실습 하기</a></div>
-      </div>
   </div>
 </section>
 <br />
